fixed the overlapping issute of start button and message button at the end of the game/ changed the background color

--- a/cover.css
+++ b/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333 !important;
+  background-color: lightblue !important;
 }
 body {
   color: #fff;
@@ -41,6 +41,8 @@ body {
 
 #message{
   color:white;
+  position: absolute;
+  right: 200px;
 }
 
 .cover{
